header claim link move + margin fixes on mobile

--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -10,6 +10,7 @@
 .header__link:hover {
   background-color: rgba(254, 205, 167, 0.5);
   box-shadow: rgba(254, 205, 167, 0.5) 0px 0px 3px 3px;
+  transition: .7s;
 }
 
 
